# crate_implementation

./: .gitignore  README.md  main.py  pyproject.toml
models/: __init__.py  crate_classification.py  crate_encoder.py
notebooks/: crate_explained_fashion.ipynb
notebooks/configs/: crate_base  crate_large  crate_medium_deep  crate_small_deep
utils/: __init__.py  hook_manager.py  metrics.py  visualization.py
