[project]
name = "crate-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
